# sqltree

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
sqlparse/: dialect.py  tokenizer.py
sqltree/: __init__.py  __main__.py  api.py  dialect.py  fixit.py  formatter.py  keywords.py  location.py  mangler.py  parser.py  peeking_iterator.py  sqltree.py  tokenizer.py  tools.py  visitor.py
tests/: test_fixit.py  test_formatter.py  test_location.py  test_parser.py  test_tokenizer.py  test_tools.py  test_visitor.py
